--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-Ciao Deni
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>ODALISK</title>
+  <meta name="description" content="odali.sk">
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <style>
+    img {
+      position: absolute;
+      margin: auto;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      max-height: 90%;
+      width: auto;
+    }
+  </style>
+</head>
+<body>
+  <h2 style="text-align:center">This domain is for sale. Offers please send to:</h2>
+  <h1 style="text-align:center">info (@) odali.sk</h1>
+  <img src="odalisk.jpg" alt="image">
+</body>
+</html>
