--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
   <link rel="icon" href="favicon.png" type="image/x-icon" />
   <style>
     img {
-      margin: auto;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      max-height: 90%;
-      width: auto;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 50%;
     }
   </style>
 </head>
