--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>ODALISK</title>
-  <meta name="description" content="odali.sk">
-  <link rel="icon" href="favicon.png" type="image/x-icon" />
+  <meta name="description" content="odali.sk" />
+  <link rel="icon" href="favicon.png" />
   <style>
     img {
       display: block;
@@ -17,6 +17,6 @@
 <body>
   <h2 style="text-align:center">This domain is for sale. Offers please send to:</h2>
   <h1 style="text-align:center">info (@) odali.sk</h1>
-  <img src="odalisk.jpg" alt="image">
+  <img src="odalisk.jpg" alt="odalisk">
 </body>
 </html>
