--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>ODALISK</title>
   <meta name="description" content="odali.sk" />
-  <link rel="icon" href="favicon.png" />
+  <link rel="icon" type="image/png" href="favicon.png" />
   <style>
     img {
       display: block;
