--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     }
   </style>
 </head>
-<body>
-  <h2 style="text-align:center">This domain is for sale. Offers please send to:</h2>
-  <h1 style="text-align:center">info (@) odali.sk</h1>
+<body style="background-color:black;">
+  <h2 style="text-align:center;color: white">This domain is for sale. Offers please send to:</h2>
+  <h1 style="text-align:center;color: white">info (@) odali.sk</h1>
   <img src="odalisk.jpg" alt="odalisk">
 </body>
 </html>
