--- a/index.html
+++ b/index.html
@@ -18,5 +18,9 @@
   <h2 style="text-align:center;color: white">This domain is for sale. Offers please send to:</h2>
   <h1 style="text-align:center;color: white">info (@) odali.sk</h1>
   <img src="odalisk.jpg" alt="odalisk">
+  <p style="text-align:center;color: white">
+    Odalisk:</br>
+    1. A woman slave in a harem.</br>
+    2. An artistic representation, often highly eroticized, of such a slave.</p>
 </body>
 </html>
